02_code1/grade.txt
Grading at Tue Dec  8 13:54:20 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘main’:
temp.c:19:4: error: expected ‘;’ before ‘}’ token
    }
    ^
The code did not have legal syntax!

Overall Grade: F
